# colorcc

./: Cargo.toml  README.md
src/: main.rs
src/color/: base_color.rs  mod.rs  namer.rs
src/core/: opt.rs
